[refactor] : .collection(Collectors.toList)를 toList()로 변경, for문을 foreach()로 사용, 줄바꿈 컨벤션 적용